[package]
name = "botguard-userspace"
version = "0.1.0"
edition = "2021"

[dependencies]
aya = { version = "0.13.1", features = ["async_tokio"] }
botguard-common = { path = "../botguard-common", features = ["user"] }
tokio = { version = "1.25", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
bytes = "1.4"
ratatui = "0.26"
crossterm = "0.27"
chrono = "0.4"
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"
aya-log = "0.2"
libc = "0.2"
